--- a/src/Component/TopMenu/DropdownMenu/dropdownmenu.css
+++ b/src/Component/TopMenu/DropdownMenu/dropdownmenu.css
@@ -23,9 +23,6 @@
     color: #2F80ED;
 }
 
-.dropdown-menu__content_close{
-    display:none;
-}
 .dropdown-menu__content{
     margin-top: 100px;
     position: absolute;
@@ -36,6 +33,7 @@
     height: 231px;
     padding: 30px 38px 40px 30px;
     justify-content: space-around;
+    background: url('../../../assets/img/Top_menu_background.svg') center no-repeat;
 }
 
 .dropdown-menu__content a{
