--- a/src/Component/TopMenu/topmenu.css
+++ b/src/Component/TopMenu/topmenu.css
@@ -3,7 +3,7 @@
     z-index: 1;
     width: 1077px;
     height: 100px;
-    left: 432px;
+    left: calc(50% - 538px);
     top: 52px;
     background: #FFFFFF;
     box-shadow: 8px 10px 4px rgba(0, 0, 0, 0.41);
