Добавляет тело страницы проекта. Начинает работу над сроками.

--- a/src/Component/ProjectPage/ProjectHeader/projectheader.css
+++ b/src/Component/ProjectPage/ProjectHeader/projectheader.css
@@ -2,7 +2,7 @@
     width: 100%;
     font-size: 72px;
 }
-.project__title{
+.project__header--info{
     z-index: 1;
     position: absolute;
     left: 410px;
