--- a/src/Component/ProjectCards/MainCard/maincard.css
+++ b/src/Component/ProjectCards/MainCard/maincard.css
@@ -1,14 +1,16 @@
 .main__card{
-    width: 346px;
-    height: 619px;
+    width: 342px;
+    height: 610px;
     background: #F2F2FF;
-    box-shadow: 3px 4px 7px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.8);
     border-radius: 21px;
     position: relative;
 }
 
 .main__card img{
     border-radius: 21px 21px 0px 0px;
+    width: 100%;
+    height: 300px;
 }
 
 .card__status--opn{
@@ -34,9 +36,10 @@
     width: 24px;
     height: 24px;
     margin: 0 12px 0 3px;
+    height: auto;
 }
 .card__br {
-    width: 317px;
+    width: 312px;
     height: 1px;
     background: black;
 }
@@ -46,12 +49,29 @@
     font-size: 20px;
     line-height: 21px;
 }
+.card__title a {
+    color: black;
+    text-decoration: none;
+}
 .card__descr {
     margin-top: 18px;
+    margin-left: 20px;
     font-weight: 500;
     font-size: 14px;
     line-height: 140%;
     height: 58px;
+    position: relative;
+}
+.card__descr::before {
+    content: "";
+    background:#EB5433;
+    height: 10px;
+    width: 10px;
+    position: absolute;
+    top: 5px;
+    left: -20px;
+    border-radius: 100%;
+
 }
 .card__footer {
     margin-top: 32px;
@@ -92,6 +112,9 @@
     height: 47px;
     border-radius: 50%;
     background-color: #90FFA2;
+}
+.card__insts img {
+    height: auto;
 }
 .card__footer {
     margin-top: 32px;
