--- a/src/Component/TopMenu/DropdownMenu/dropdownmenu.css
+++ b/src/Component/TopMenu/DropdownMenu/dropdownmenu.css
@@ -34,6 +34,7 @@
     padding: 30px 38px 40px 30px;
     justify-content: space-around;
     background: url('../../../assets/img/Top_menu_background.svg') center no-repeat;
+    pointer-events: none;
 }
 
 .dropdown-menu__content a{
