--- a/src/Component/ProfilePage/ProjWrapper/projwrapper.css
+++ b/src/Component/ProfilePage/ProjWrapper/projwrapper.css
@@ -6,12 +6,11 @@
     position: relative;
 }
 .proj__empty--info {
-margin: 0 auto;
-width: 400px;
-margin-top: 104px;
-font-size: 24px;
-line-height: 38px;
-text-align: center;
-text-decoration-line: underline;
-color: #4E4E4E;
+    width: 400px;
+    margin: 104px auto 0;
+    font-size: 24px;
+    line-height: 38px;
+    text-align: center;
+    text-decoration-line: underline;
+    color: #4E4E4E;
 }
