--- a/src/Component/ProjectCards/ExtCard/extcard.css
+++ b/src/Component/ProjectCards/ExtCard/extcard.css
@@ -1,11 +1,11 @@
-.project_card-ext{
+.project_card{
     width: 722px;
     height: 192px;
     border-radius: 66px;
     color: white;
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../../../assets/img/project_img.png) center / cover no-repeat;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    position: relative;
+    position: absolute;
     padding: 20px 40px;
 }
 
@@ -43,7 +43,7 @@
 .project_card-decr {
     margin-top: 11px;
 }
-.project_card_-ext-back {
+.project_card_back {
     background: white;
     text-shadow: none;
     color: black;
